[project]
name = "northlanding-disc-return"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "figenv>=0.5",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",
    "httpx>=0.27",
    "twilio>=9.0",
    "supabase>=2.5",
    "apscheduler>=3.10",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "icalendar>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
env = [
    "API_KEY_HMAC_SECRET=test-hmac-secret",
]
